# Dijkstra_OpenCL_implementation

./: .gitignore  LICENSE.md  README.md
inc/: ar_CL_.h  ar_CL_graph_algorithms.h  ar_disjoint_set.h  ar_graph.h  ar_graph_algorithms.h  ar_hf.h
kernels/: boruvka.cl  dijkstra.cl
src/: CMakeLists.txt  ar_CL_.c  ar_CL_boruvka.c  ar_CL_dijkstra.c  ar_boruvka.c  ar_dijkstra.c  ar_disjoint_set.c  ar_graph.c  ar_hf.c  main.c
tests/: check_equivalence.cpp  dijkstra.cpp  gragen.cpp  test_system.sh
